--- a/src/styles/booking-form.css
+++ b/src/styles/booking-form.css
@@ -99,11 +99,6 @@
   gap: 10px;
   padding: 1rem 0;
   width: 100%;
-  
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 .booking__form-addons_container label {
@@ -115,10 +110,18 @@
   font-size: var(--font-sm);
   line-height: var(--line-height-normal);
   color: var(--color-code-text);
+  
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-.booking__form input[type='checkbox']:checked + label,
-.booking__form-addons_container label:hover {
+.booking__form-addons_container label::selection {
+  background-color: transparent;
+}
+
+.booking__form input[type='checkbox']:checked + label {
   background-color: var(--color-primary);
   color: var(--color-code-bg);
 }
